picocuda/src/opto/son/snapshots/picoc__son__parser__test_lexer__sub.snap
---
source: src/son/parser.rs
expression: tokens
---
[
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "main",
        typ: Alias,
    },
    Token {
        lexeme: "(",
        typ: PuncLeftParen,
    },
    Token {
        lexeme: ")",
        typ: PuncRightParen,
    },
    Token {
        lexeme: "{",
        typ: PuncLeftBrace,
    },
    Token {
        lexeme: "return",
        typ: KeywordRet,
    },
    Token {
        lexeme: "88",
        typ: LiteralInt,
    },
    Token {
        lexeme: "-",
        typ: Minus,
    },
    Token {
        lexeme: "32",
        typ: LiteralInt,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "}",
        typ: PuncRightBrace,
    },
]
